feature: add new metods in the entity user

--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 PORT=3000
 
 #RAILWAY DATA BASE
-DB_PORT=7789
-DB_HOST=containers-us-west-115.railway.app
-DB_USER=root
-DB_PASSWORD=yAtz7GGYeJ7ueCxBDyLm
-DB_NAME=railway
+# DB_PORT=7789
+# DB_HOST=containers-us-west-115.railway.app
+# DB_USER=root
+# DB_PASSWORD=yAtz7GGYeJ7ueCxBDyLm
+# DB_NAME=railway
 
 #base LOCAL develop
-# DB_PORT=3306
-# DB_HOST=localhost
-# DB_USER=root
-# DB_PASSWORD=123456
-# DB_NAME=classifields_dev
+DB_PORT=3306
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=123456
+DB_NAME=classifields_dev
 
 #URL=mysql://root:yAtz7GGYeJ7ueCxBDyLm@containers-us-west-115.railway.app:7789/railway
 
