feature: add metods send email and metod for update and forget password

--- a/.env
+++ b/.env
@@ -14,5 +14,11 @@ DB_USER=root
 DB_PASSWORD=123456
 DB_NAME=classifields_dev
 
+EMAIL_SENDER_HOTMAIL=apks_vini_ars@hotmail.com
+PASSWORD_EMAIL=v/inicius02
+
+EMAIL_SENDER_GMAIL=apks.vini.ars@gmail.com
+PASSWORD_EMAIL_SENDER_GMAIL=v/inicius02
+
 #URL=mysql://root:yAtz7GGYeJ7ueCxBDyLm@containers-us-west-115.railway.app:7789/railway
 
