feat: config gcp

--- a/.env
+++ b/.env
@@ -1,18 +1,42 @@
 PORT=3000
 
-#RAILWAY DATA BASE
+################## RAILWAY DATA BASE nao vamos mais usar ##############
+
 # DB_PORT=7789
 # DB_HOST=containers-us-west-115.railway.app
 # DB_USER=root
 # DB_PASSWORD=yAtz7GGYeJ7ueCxBDyLm
 # DB_NAME=railway
 
+############################ MY SQL ##########################################
+
 #base LOCAL develop
+# DB_PORT=3306
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=123456
+# DB_NAME=classifields_dev
+
+#----------------------acima local abaixo remota------------------------------------
+
+#base freesqldatabase develop
 DB_PORT=3306
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=123456
-DB_NAME=classifields_dev
+DB_HOST=sql10.freesqldatabase.com
+DB_USER=sql10635817
+DB_PASSWORD=V2cE5r38VR
+DB_NAME=sql10635817
+
+############################### POSTGRESS #########################################
+
+#configuracao conexao com banco postgress em elephant.com usa apenas o DATABASE_URL
+# DB_HOST=stampy.db.elephantsql.com
+# DB_PORT=5432
+# DB_USER=dhxoyjnt
+# DB_PASSWORD=nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ
+# DB_NAME=classifields_dev
+# DATABASE_URL=postgres://dhxoyjnt:nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ@stampy.db.elephantsql.com:5432/dhxoyjnt?ssl=true
+
+##################################################################################
 
 EMAIL_SENDER_HOTMAIL=apks_vini_ars@hotmail.com
 PASSWORD_EMAIL=v/inicius02
