feat: change mysql by postgres and too fix object product

--- a/.env
+++ b/.env
@@ -19,22 +19,22 @@ PORT=3000
 
 #----------------------acima local abaixo remota------------------------------------
 
-#base freesqldatabase develop
-DB_PORT=3306
-DB_HOST=sql10.freesqldatabase.com
-DB_USER=sql10635817
-DB_PASSWORD=V2cE5r38VR
-DB_NAME=sql10635817
+#base freesqldatabase develop => essa merda expiro
+# DB_PORT=3306
+# DB_HOST=sql10.freesqldatabase.com
+# DB_USER=sql10635817
+# DB_PASSWORD=V2cE5r38VR
+# DB_NAME=sql10635817
 
 ############################### POSTGRESS #########################################
 
 #configuracao conexao com banco postgress em elephant.com usa apenas o DATABASE_URL
-# DB_HOST=stampy.db.elephantsql.com
-# DB_PORT=5432
-# DB_USER=dhxoyjnt
-# DB_PASSWORD=nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ
-# DB_NAME=classifields_dev
-# DATABASE_URL=postgres://dhxoyjnt:nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ@stampy.db.elephantsql.com:5432/dhxoyjnt?ssl=true
+DB_HOST=stampy.db.elephantsql.com
+DB_PORT=5432
+DB_USER=dhxoyjnt
+DB_PASSWORD=nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ
+DB_NAME=classifields_dev
+DATABASE_URL=postgres://dhxoyjnt:nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ@stampy.db.elephantsql.com:5432/dhxoyjnt?ssl=true
 
 ##################################################################################
 
