--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ DB_USER=dhxoyjnt
 DB_PASSWORD=nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ
 DB_NAME=classifields_dev
 DATABASE_URL=postgres://dhxoyjnt:nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ@stampy.db.elephantsql.com:5432/dhxoyjnt?ssl=true
-
+#sss
 ##################################################################################
 
 EMAIL_SENDER_HOTMAIL=apks_vini_ars@hotmail.com
