feat: mercado pago document didi swager

--- a/.env
+++ b/.env
@@ -1,32 +1,10 @@
 PORT=3000
 
-################## RAILWAY DATA BASE nao vamos mais usar ##############
+############################### STAGING #########################################
 
-# DB_PORT=7789
-# DB_HOST=containers-us-west-115.railway.app
-# DB_USER=root
-# DB_PASSWORD=yAtz7GGYeJ7ueCxBDyLm
-# DB_NAME=railway
+TOKEN_TEST_MERCADOPAGO=TEST-4225031559492417-061420-61232130f4435efef2496d3c8582f69e-826535867
 
-############################ MY SQL ##########################################
-
-#base LOCAL develop
-# DB_PORT=3306
-# DB_HOST=localhost
-# DB_USER=root
-# DB_PASSWORD=123456
-# DB_NAME=classifields_dev
-
-#----------------------acima local abaixo remota------------------------------------
-
-#base freesqldatabase develop => essa merda expiro
-# DB_PORT=3306
-# DB_HOST=sql10.freesqldatabase.com
-# DB_USER=sql10635817
-# DB_PASSWORD=V2cE5r38VR
-# DB_NAME=sql10635817
-
-############################### POSTGRESS #########################################
+# POSTGRESS #########################################
 
 #configuracao conexao com banco postgress em elephant.com usa apenas o DATABASE_URL
 DB_HOST=stampy.db.elephantsql.com
@@ -35,9 +13,16 @@ DB_USER=dhxoyjnt
 DB_PASSWORD=nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ
 DB_NAME=classifields_dev
 DATABASE_URL=postgres://dhxoyjnt:nbazovjs-RodQF-RVLzFnBpjNYWlfGNZ@stampy.db.elephantsql.com:5432/dhxoyjnt?ssl=true
-#sss
+
+##################################################################################
 ##################################################################################
 
+################################ PROD ##########################################
+
+TOKEN_PRODUCAO_MERCADOPAGO=APP_USR-4225031559492417-061420-996bae465a048060b6da127f2ae18d74-826535867
+
+###########################################################################################
+ 
 EMAIL_SENDER_HOTMAIL=apks_vini_ars@hotmail.com
 PASSWORD_EMAIL=v/inicius02
 
