feat: push notification in proguess

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
 PORT=3000
 
+#FIREBASE-PUSH-NOTIFICATION STAGING
+ENVIRONMENT=development
+
+#FIREBASE-PUSH-NOTIFICATION PROD
+#ENVIRONMENT=production
+
 ############################### STAGING #########################################
 
 TOKEN_TEST_MERCADOPAGO=TEST-4225031559492417-061420-61232130f4435efef2496d3c8582f69e-826535867
